# shensu

./: .gitignore  11.js  11.md  CHANGELOG.md  config.json  main.py  package.json  pnpm-lock.yaml  pyproject.toml  shensu.js  submit_plea.js  submit_plea.py  wechat_app_plan.md  wx_login.md  yzy_sms.md
.github/workflows/: build-windows.yml
data/: accounts.json  sessions.json  submissions.json
data/logs/: app.log.2025-09-17  app.log.2025-09-18
scripts/: build_win.ps1
src/wechat_tool/: config.py  logging_config.py  settings.py
src/wechat_tool/api/: client.py  login_client.py
src/wechat_tool/services/: account_service.py  login_service.py  sms_providers.py  submission_service.py
src/wechat_tool/storage/: json_store.py  models.py
src/wechat_tool/ui/: app.py  logger.py  tk_helpers.py
src/wechat_tool/utils/: crypto.py  files.py
