[project]
name = "shensu"
version = "0.2.0"
description = "申诉提交脚本"
authors = [{ name = "yml" }]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "cryptography>=42.0",
    "python-dotenv>=1.0",
    "ttkbootstrap>=1.14.2",
]

[project.scripts]
submit-plea = "main:main"
submit-plea-gui = "main:main_gui"

[tool.uv]
index-url = "https://pypi.org/simple"

[tool.uv.sources]
wechat_tool = { path = "src/wechat_tool" }
